lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: arnikhil-app
  name: arnikhil-internal-lb
  namespace: arnikhil-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: arnikhil-app
status:
  loadBalancer: {}
