ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arnikhil-app-route
  namespace: arnikhil-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: arnikhil.ashutoshh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arnikhil-internal-lb
            port:
              number: 80
